# rust-locale

./: .gitignore  .stignore  Cargo.toml  Dockerfile  README.md  bashrc  build.rs  docker-compose.yaml  gitconfig  okteto.yml
.circleci/: config.yml
c/: .gitignore  Makefile.am  config.h  configure.ac
c/lib/: .gitignore  Makefile.am
c/m4/: gnulib-cache.m4  gnulib-comp.m4
c/src/: Makefile.am  ctype.c
src/: ctype.rs  lib.rs  util.rs
