[package]
name = "rust-locale"
version = "0.1.0"
edition = "2021"
description = "POSIX.1 locale extension for Rust"
repository = "https://github.com/a-takahashi223/rust-locale"
license = "MIT OR Apache-2.0"
keywords = ["locale", "POSIX", "libc"]
categories = ["internationalization", "localization"]

include = [
    "/build.rs",
    "/c/src/ctype.c",
    "/src",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.0"
