[package]
name = "rust-locale"
version = "0.1.0"
edition = "2021"
description = "POSIX.1 locale extension for Rust"
repository = "https://github.com/a-takahashi223/rust-locale"
license = "MIT OR Apache-2.0"
keywords = ["locale", "POSIX", "libc"]
categories = ["internationalization", "localization"]

include = [
    "/build.rs",
    "/c/lib/stdlib.in.h",
    "/c/lib/mbtowc-lock.c",
    "/c/lib/setlocale_null.c",
    "/c/lib/verify.h",
    "/c/lib/Makefile.am",
    "/c/lib/mbsinit.c",
    "/c/lib/hard-locale.c",
    "/c/lib/attribute.h",
    "/c/lib/mbtowc-lock.h",
    "/c/lib/limits.in.h",
    "/c/lib/arg-nonnull.h",
    "/c/lib/setlocale-lock.c",
    "/c/lib/unistd.in.h",
    "/c/lib/Makefile.in",
    "/c/lib/mbrtowc-impl-utf8.h",
    "/c/lib/windows-initguard.h",
    "/c/lib/locale.in.h",
    "/c/lib/_Noreturn.h",
    "/c/lib/hard-locale.h",
    "/c/lib/stdint.in.h",
    "/c/lib/wchar.in.h",
    "/c/lib/lc-charset-dispatch.h",
    "/c/lib/setlocale_null.h",
    "/c/lib/localcharset.c",
    "/c/lib/mbrtowc-impl.h",
    "/c/lib/wcrtomb.c",
    "/c/lib/c++defs.h",
    "/c/lib/unistd.c",
    "/c/lib/streq.h",
    "/c/lib/mbrtowc.c",
    "/c/lib/warn-on-use.h",
    "/c/lib/stdbool.in.h",
    "/c/lib/lc-charset-dispatch.c",
    "/c/lib/sys_types.in.h",
    "/c/lib/stddef.in.h",
    "/c/lib/localcharset.h",
    "/c/lib/inttypes.in.h",
    "/c/Makefile.am",
    "/c/depcomp",
    "/c/m4/locale_h.m4",
    "/c/m4/std-gnu11.m4",
    "/c/m4/mbstate_t.m4",
    "/c/m4/wint_t.m4",
    "/c/m4/extern-inline.m4",
    "/c/m4/codeset.m4",
    "/c/m4/setlocale_null.m4",
    "/c/m4/limits-h.m4",
    "/c/m4/warn-on-use.m4",
    "/c/m4/ssize_t.m4",
    "/c/m4/gnulib-comp.m4",
    "/c/m4/visibility.m4",
    "/c/m4/wcrtomb.m4",
    "/c/m4/stdbool.m4",
    "/c/m4/inttypes.m4",
    "/c/m4/mbsinit.m4",
    "/c/m4/multiarch.m4",
    "/c/m4/gnulib-cache.m4",
    "/c/m4/stdint.m4",
    "/c/m4/sys_types_h.m4",
    "/c/m4/locale-ja.m4",
    "/c/m4/zzgnulib.m4",
    "/c/m4/localcharset.m4",
    "/c/m4/locale-zh.m4",
    "/c/m4/stddef_h.m4",
    "/c/m4/mbrtowc.m4",
    "/c/m4/off_t.m4",
    "/c/m4/pid_t.m4",
    "/c/m4/00gnulib.m4",
    "/c/m4/stdlib_h.m4",
    "/c/m4/absolute-header.m4",
    "/c/m4/extensions.m4",
    "/c/m4/unistd_h.m4",
    "/c/m4/gnulib-common.m4",
    "/c/m4/locale-fr.m4",
    "/c/m4/include_next.m4",
    "/c/m4/wchar_t.m4",
    "/c/m4/threadlib.m4",
    "/c/m4/wchar_h.m4",
    "/c/config.h.in",
    "/c/config.sub",
    "/c/Makefile.in",
    "/c/missing",
    "/c/config.guess",
    "/c/src/Makefile.am",
    "/c/src/Makefile.in",
    "/c/src/ctype.c",
    "/c/ar-lib",
    "/c/configure.ac",
    "/c/install-sh",
    "/c/compile",
    "/c/aclocal.m4",
    "/c/configure",
    "/src",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"

[build-dependencies]
